Bootstrap devise views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,13 @@
 
   <body>
 
-    <%= render 'home/navbar' %>
+ <%= render 'home/navbar' %> 
+
 
 <!-- to wrap all our pages into container for padding -->
     <div class="container">
-    <%= render 'home/navbar' %>
-
+   
+     <%= render 'home/flash' %> 
     <%= yield %>
   </body>
 </html>
